fix: disable bootstrap dark mode
Bootstrap now enables dark mode by default from 5.3 onwards, this
requires variables-dark to be imported. For now dark mode is disabled to
keep the project working.

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,4 +1,5 @@
 /* Variables and mixins declared here will be available in all other SCSS files */
+$enable-dark-mode: false;
 @import 'bootstrap/scss/functions'; /* Override Bootstrap's variables here */
 @import 'bootstrap/scss/variables';
 @import 'bootstrap/scss/maps';
